--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 h1 {
     text-align: center;
 }
+
+div {
+    text-align: center;
+}
+
+ol {
+   display: inline-block;
+}
+
+li {
+    text-align: left;
+}
